fix overflow: scroll problem

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -59,11 +59,13 @@ h3 {
   @include mt-mb;
 }
 h4 {
-  font-size: 2rem;
+  font-size: 2.25rem;
+  font-weight: 700;
 }
 
 p {
-  font-size: 2.15rem;
+  font-size: 2.25rem;
+  font-weight: 400;
 }
 
 blockquote {
@@ -100,7 +102,8 @@ samp {
   margin: 1rem 0;
   line-height: 2;
   font-family: 'Monaco','Consolas','Menlo',monospace;
-  word-break: break-all;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 blockquote {
