--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -4,8 +4,9 @@
   border: 1px solid;
   display: block;
   margin: 1rem 0;
-  padding: 1.25rem 2.25rem;
+  padding: 1.5rem 2.5rem;
   transition: all .2s;
+  font-size: 2rem;
 }
 
 .tag {
@@ -17,6 +18,7 @@
     @extend .button;
     display: inline-block;
     padding: .3rem .5rem;
+    font-size: 1.5rem;
     &:not(:last-child) {
       margin-right: .5rem;
     }
@@ -41,6 +43,14 @@ $codes: (
         border: 1px solid $code;
         color: $background-color;
         text-decoration: none;
+      }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      .button-link {
+        border: 1px solid $code;
+        background-color: $code;
+        color: $background-color;
       }
     }
   }
