--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -12,7 +12,6 @@
     font-size: 1.7rem;
     // white-space: pre-wrap;
     // word-wrap: break-word;
-    overflow: auto;
 
     @media only screen and (max-width: $bp-small) {
         @include set-padding(1rem, 1rem);
