--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -15,12 +15,10 @@
   }
 
   @media only screen and (max-width: $bp-small) {
-    font-size: 2.25rem;
     padding: 3rem;
   }
 
   @media only screen and (max-width: $bp-smallest) {
-    font-size: 1.75rem;
     padding: 1.75rem;
   }
 }
