--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -1,12 +1,12 @@
 .posts {
   @include set-padding(7%, 15%);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  grid-auto-rows: minmax(30rem, auto);
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-auto-rows: minmax(35rem, auto);
   grid-column-gap: 3%;
   grid-row-gap: 4rem;
 
-  @media only screen and (max-width: $bp-smallest-sm) {
+  @media only screen and (max-width: $bp-small) {
     @include set-padding(10%, 2%);
   }
 }
@@ -22,7 +22,7 @@
     @include set-padding(10%, 5%);
   }
 
-  @media only screen and (max-width: $bp-smallest) {
+  @media only screen and (max-width: $bp-small) {
     @include set-padding(10%, 2%);
   }
 
